<resources>
    <string name="app_name">Cashee</string>
    <string name="app_name_no_caps">cashee</string>

    <string name="home">Home</string>
    <string name="finance">finance</string>
    <string name="reports">reports</string>
    <string name="profile">profile</string>
    <string name="authentication">authentication</string>

    <string name="title_home">Home</string>
    <string name="title_finance">Finanças</string>
    <string name="title_reports">Relatórios</string>
    <string name="title_profile">Perfil</string>
    <string name="title_authentication">Autenticação</string>

    <string name="add">adicionar</string>
    <string name="next">Próximo</string>
    <string name="skip">Pular</string>
    <string name="start">Começar</string>

</resources>